# adventofcode2018

./: adventofcode2018.cabal  day01.hs  day01part2.hs  day02.hs  day02part2.hs  day03.hs  day03part2.hs  day04.hs  day04part2.hs  day05.hs  day05part2.hs  day06.hs  day06part2.hs  day07.hs  day07part2.hs  day08.hs  day08part2.hs  day09.hs  stack.yaml
