name:                adventofcode2018
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/thomaschrstnsn/adventofcode2018#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      .
  build-depends:       base >= 4.7 && < 5, hspec, hspec-core, QuickCheck, vector, primitive, containers, parsec
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/thomaschrstnsn/adventofcode2018
